--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,48 @@
       <h2 class="process__subtitle">How we do what we do.</h2>
       </div>
 
-      <div class="process__goals"></div>
+      <div class="process__goals">
+        <div class="process__text">
+          <div class="process__sketching__text">
+            <img class="process__sketching__img" src="/images/sketching.png" alt="">
+        <h2 class="process__sketching__title">Sketching</h2>
+        <p class="process__sketching__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae tempor leo iaculis.</p>
+        </div>
+        <div class="process__Finalizing__text">
+          <img class="process__Finalizing__img" src="/images/finalizing.png" alt="">
+        <h2 class="process__Finalizing__title">Finalizing</h2>
+        <p class="process__Finalizing__subtitle">Adipiscing elit. Nulla ut tristique libero. Nulla vitae tempor leo iaculis luctus sapien ac arcu tempor, vitae.</p>
+        </div>
+        <div class="process__Building__text">
+          <img class="process__Building__img" src="/images/building.png" alt="">
+        <h2 class="process__Building__title">Building</h2>
+        <p class="process__Building__subtitle">Nulla ut tristique libero. Lorem ipsum ut tristique libero. Nulla luctus sapien ac arcu tempor, vitae lorem ipsum dolor leo iaculis.</p>
+        </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="marble__section">
+    <div class="marble__container">
+      <h2 class="marble__title">The marble staircase</h2>
+      <p class="marble__subtitle">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+    </div>
+    <div class="house__image">
+      <img src="/images/marble.png" alt="">
+    </div>
+  </section>
+
+  <section class="customers__section">
+    <div class="customers__container">
+      <h2 class="customers__title">prior clients</h2>
+      <h2 class="customers__subtitle">Happy customers.</h2>
+      <p class="customers__text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+    </div>
+    <div class="customers__logos">
+      <div class="customers__images">
+      <img src="/images/hillheis.png" alt=""><img src="/images/rickgransen.png" alt=""><img src="/images/studiocai.png" alt=""><img src="/images/chill.png" alt="">
+      </div>
     </div>
   </section>
 </main>
