--- a/Index.html
+++ b/Index.html
@@ -116,6 +116,50 @@
       </div>
     </div>
   </section>
+
+  <section class="swirling__section">
+    <div class="swirling__container">
+      <h2 class="swirling__title">The swirling staircase</h2>
+      <p class="swirling__subtitle">Lorem ipsum dolor sit amet, dolor sit amet dolor sit amet.</p>
+    </div>
+    <div class="house__image">
+      <img src="/images/swirling.png" alt="">
+    </div>
+  </section>
+
+  <section class="projects__section">
+    <div class="projects__container">
+      <div class="projects__titles">
+        <h2 class="projects__main__title">Featured projects</h2>
+        <p class="projects__subtitle">Some of the latest and greatest projects from us here at Wishbone+Partners.</p>
+      </div>
+      <div class="projects__project">
+        <img src="/images/zdanie.png" alt=""><img src="/images/newyork.png" alt=""><img src="/images/fasad.png" alt="">
+        <div class="projects__titles__newyork">
+        <h2 class="projects__title__newyork">New York</h2>
+        <p class="projects__subtitle__road">Big Road Brewery</p>
+        </div>
+        <div class="projects__button">
+        <a href="#" class="projects__button__link">Read More</a>
+        </div>
+      </div>
+      <div class="projects__link">
+        <a href="#" class="projects__button__link__all">VIew all projects</a>
+        </div>
+    </div>
+  </section>
+
+  <section class="team__section">
+    <div class="team__container">
+      <div class="team__titles">
+        <h2 class="team__title__main">Meet our team</h2>
+        <p class="team__sbutitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis.</p>
+        <a class="team__link" href="#">See team</a>
+      </div>
+      <div class="team__people"></div>
+    </div>
+  </section>
+
 </main>
 </body>
 </html>
