--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,7 @@
 </section>
   </header>
 
- <main class="ourfirm">
+ <main>
   <section class="ourfirm__content">
     <h1 class="ourfirm__title">Our firm</h1>
     <div>
@@ -71,7 +71,7 @@
       <h2 class="process__title">Our process</h2>
       <h2 class="process__subtitle">How we do what we do.</h2>
       </div>
-
+      
       <div class="process__goals">
         <div class="process__text">
           <div class="process__sketching__text">
@@ -156,9 +156,76 @@
         <p class="team__sbutitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis.</p>
         <a class="team__link" href="#">See team</a>
       </div>
-      <div class="team__people"></div>
+      <div class="team__people">
+        <div class="team__people__stephan">
+    <img class="team__img" src="/images/chel.png" alt="">
+    <div class="team__titles__stephan">
+    <p class="team__stephen__title">Stephen Collier</p>
+    <p class="team__stephen__subtitle">Senior Partner</p>
+    </div>
+    </div>
+
+    <div class="team__people__ferris">
+    <img class="team__img" src="/images/ferrisWonder.png" alt="">
+    <div class="team__titles__ferris">
+    <p class="team__ferris__title">Ferris Wonder</p>
+    <p class="team__ferris__subtitle">Associate Partner</p>
+    </div>
+    </div>
+
+    <div class="team__people__niko">
+    <img class="team__img" src="/images/nikoFerry.png" alt="">
+    <div class="team__titles__niko">
+    <p class="team__niko__title">Niko Ferry</p>
+    <p class="team__niko__subtitle">Partner</p>
+    </div>
+    </div>
+
+    <div class="team__people__nolan">
+    <img class="team__img" src="/images/nolanPeters.png" alt="">
+    <div class="team__titles__nolan">
+    <p class="team__nolan__title">Nolan Peters</p>
+    <p class="team__nolan__subtitle">Associate</p>
+    </div>
+    </div>
+
+    <div class="team__people__aria">
+    <img class="team__img" src="/images/ariaStone.png" alt="">
+    <div class="team__titles__aria">
+    <p class="team__aria__title">Aria Stone</p>
+    <p class="team__aria__subtitle">Senior Partner</p>
+    </div>
+    </div>
+      </div>
     </div>
   </section>
+
+  <section class="touch__section">
+    <div class="touch__container">
+      <div class="touch__titles">
+        <h2 class="touch__title">Get in touch</h2>
+        <p class="touch__subtitle">Think we would be a good fit for your next project?</p>
+      </div>
+      <a class="touch__link" href="">Get in touch</a>
+    </div>
+  </section>
+
+  <footer>
+    <section class="footer">
+      <div class="footer__container">
+        <div class="footer__tittles">
+        <h2 class="footer__title">Wishbone+Partners</h2>
+        <p class="footer__subtitle">Powered by Webflow.</p>
+        <p class="footer__subtitle__licens">All rights reserved Wishbone+Partners, Inc.Licensing.</p>
+        </div>
+        <div class="footer__links">
+          <a href="#"><img src="/images/twitter.png"></a>
+          <a href="#"><img src="/images/inst.png"></a>
+          <a href="#"><img src="/images/facebook.png"></a>
+        </div>
+      </div>
+    </section>
+  </footer>
 
 </main>
 </body>
