--- a/Index.html
+++ b/Index.html
@@ -15,17 +15,17 @@
       <h1 class="header__logo">Wishbone+Partners</h1>
       <nav class="header__navigation">
         <ul class="header__navigationfirst">
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a class="template-link" href="#">Get Template</a></li>
+          <li><a class="header__project__link" href="#">Projects</a></li>
+          <li><a class="header__aboutt__link" href="#">About</a></li>
+          <li><a class="header__newst__link" href="#">News</a></li>
+          <li><a class="header__team__link" href="#">Team</a></li>
+          <li><a class="header__contact__link" href="#">Contact</a></li>
+          <li><a class="header__template-link" href="#">Get Template</a></li>
         </ul>
       </nav>
     </div>
 
-    <section class="readmore">
+    <section class="readmore__section">
   <div class="readmore__content">
     <h1 class="readmore__title">Wishbone+Partners</h1>
     <p class="readmore__subtitle">The home of beautiful architecture.</p>
